@@ -2,6 +2,8 @@ This file describes the changes to the Log for C++ library. See the CVS reposito
 
 2002-07-11 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
 	* src/PatternLayout.cpp: use std::string::size_type instead of int.
+	* src/PropertyConfiguratorImpl.cpp: use map.lower_bound() to determine 
+	begin and end for appender and category properties.
 	
 2002-07-10 David Resnick <dresnick@mobilespear.com>
 	* src/PatternLayout.cpp, include/log4cpp/PatternLayout.hh, 
